# simple-topes

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  index.html  package.yaml  simple-topes.cabal  stack-ghc-8.6.5.yaml  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
examples/: short-demo.topes  simple.topes  simplices.topes
haddock/: doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-Z.html  doc-index.html  index.html
haddock/all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  (+13 more)
simple-topes/: Makefile  README.md  package.yaml  simple-topes.cabal  simple-topes.nix
try-simple-topes/: Main.hs  cabal.config  default.nix  index.html  try-simple-topes.cabal
(+1047 files in other folders)
