name:                try-simple-topes
version:             0.1.0
synopsis:            A serverless online version of simple-topes theorem prover
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable try-simple-topes
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  build-depends:       base, miso, simple-topes
  default-language:    Haskell2010
